--- a/src/main/AndroidManifest.xml
+++ b/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-		  package="com.feigdev.hearty.app">
+		  package="io.hearty.hearty.app">
 
 	<uses-sdk android:minSdkVersion="19"/>
 
@@ -49,7 +49,7 @@
 		</service>
 
 		<service
-				android:name="com.feigdev.ble.lib.heart.BleHeartService"
+				android:name="io.hearty.ble.lib.heart.BleHeartService"
 				android:enabled="true"
 				android:exported="false">
 		</service>
